# bot-man

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  deploy.sh
src/: lib.rs  main.rs
src/agent/: mod.rs
src/covalent/: mod.rs
src/middleman/: mod.rs
src/stat_handler/: UserStats.json  mod.rs
src/stats/: mod.rs
src/tgbot/: mod.rs
