[package]
name = "agentic-eth"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
log = "0.4.25"
pretty_env_logger = "0.5.0"
teloxide = "0.13.0"
tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["blocking"] }
serde = "1.0.217"
serde_json = "1.0.138"
