[package]
name = "bot-man"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
log = "0.4.25"
pretty_env_logger = "0.5.0"
teloxide = { version = "0.13", features = ["macros"] }
teloxide_tests = "0.2.0"
tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["blocking"] }
serde = "1.0.217"
serde_json = "1.0.138"
lazy_static = "1.5.0"
sysinfo = "0.33.1"
anyhow = "1.0.95"
alloy = "0.11.0"
